# Simulator

./: .gitignore  .gitmodules  BUILD-MACOS.md  CLAUDE.md  CMakeLists.tpl  CMakeLists.txt  ProposedPRs.html  TOOL_TABLE_FORMAT.md  proposed-prs.html
.github/workflows/: build-matched-sim.yml  release-sim.yml
src/: driver.c  driver.h  grbl_eeprom_extensions.c  littlefs_hal.c  littlefs_hal.h  main.c  mcu.c  platform.h  platform_linux.c  platform_windows.c  serial.c  sim.rc  sim_plugin_prelude.h  sim_setup.h  sim_view.c  sim_view.h  simulator.c  simulator.h
src/littlefs/: lfs.c
tools/: make_icon.py  prs.json
